Add pyhton basics notebook

--- a/pyhton basics/Untitled-1.ipynb
+++ b/pyhton basics/Untitled-1.ipynb
@@ -1117,6 +1117,31 @@
     "b <<= a\n",
     "print(b)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47528394",
+   "metadata": {},
+   "source": [
+    "### Identity Operators\n",
+    "- In Python, is and is not are the identity operators both are used to check if two values are located on the same part of the memory.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5720b13a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "c = a\n",
+    "\n",
+    "print(a is not a)\n",
+    "print(a is c)"
+   ]
   }
  ],
  "metadata": {
